# compss

./: .gitmodules  Dockerfile  pom.xml
builders/: buildlocal  buildpackages  buildscs
compss/: pom.xml
compss/agent/: pom.xml
compss/programming_model/: pom.xml
compss/programming_model/bindings/python/: VERSION.txt  build.sh  clean.sh  commons.sh  install.sh  pom.xml  pyproject.toml  setup.py
compss/programming_model/bindings/python/src/pycompss/: interactive.py
compss/programming_model/bindings/python/src/pycompss/api/: binary.py  compss.py  data_transformation.py  mpi.py  multinode.py  reduction.py  software.py  task.py
compss/programming_model/bindings/python/src/pycompss/api/commons/: constants.py
compss/programming_model/bindings/python/src/pycompss/dds/: dds.py
compss/programming_model/bindings/python/src/pycompss/dds/core/: __init__.py  tasks.py
compss/programming_model/bindings/python/src/pycompss/dds/examples/: transitive_closure.py  wordcount_k_means.py
compss/programming_model/bindings/python/src/pycompss/runtime/: launch.py
compss/programming_model/bindings/python/src/pycompss/runtime/management/: COMPSs.py  classes.py  object_tracker.py  synchronization.py
compss/programming_model/bindings/python/src/pycompss/runtime/management/link/: messages.py  separate.py
compss/programming_model/bindings/python/src/pycompss/runtime/task/: master.py  worker.py
compss/programming_model/bindings/python/src/pycompss/streams/components/objects/: kafka_connectors.py
compss/programming_model/bindings/python/src/pycompss/tests/unittests/util/: test_serializer.py
compss/programming_model/bindings/python/src/pycompss/tests/unittests/worker/: test_external_mpi.py  test_gat.py
compss/programming_model/bindings/python/src/pycompss/util/: location.py
compss/programming_model/bindings/python/src/pycompss/util/logger/: helpers.py  level.py  remittent.py
compss/programming_model/bindings/python/src/pycompss/util/logger/cfg/: __init__.py  logging_gat_worker.json  logging_master.json  logging_worker.json
compss/programming_model/bindings/python/src/pycompss/util/process/: manager.py  preloader.py
compss/programming_model/bindings/python/src/pycompss/util/serialization/: serializer.py
compss/programming_model/bindings/python/src/pycompss/util/std/: redirects.py
compss/programming_model/bindings/python/src/pycompss/util/tracing/: types_events_worker.py
compss/programming_model/bindings/python/src/pycompss/worker/commons/: worker.py
compss/programming_model/bindings/python/src/pycompss/worker/container/: container_worker.py
compss/programming_model/bindings/python/src/pycompss/worker/gat/: worker.py
compss/programming_model/bindings/python/src/pycompss/worker/piper/: mpi_piper_worker.py  piper_worker.py
compss/programming_model/bindings/python/src/pycompss/worker/piper/cache/: manager.py  tracker.py
compss/programming_model/bindings/python/src/pycompss/worker/piper/commons/: executor.py  utils.py  utils_logger.py
compss/runtime/: pom.xml
compss/tools/: pom.xml
dependencies/: install_extrae.sh
maven-plugins/: pom.xml
(+535 files in other folders)
